--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shreya Biswas - PhD Student in Computer Science</title>
+    <title>Sagnik De</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-brand">
-                <a href="#home">Shreya Biswas</a>
+                <a href="#home">Sagnik De</a>
             </div>
             <button class="nav-toggle" id="nav-toggle">
                 <span></span>
@@ -44,9 +44,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Shreya Biswas</h1>
+                    <h1>Sagnik De</h1>
                     <h2>PhD Student in Computer Science</h2>
-                    <p class="hero-subtitle">Specializing in Few-Shot Computer Vision, Vision-Language models, Domain Adaptation, and Medical Imaging</p>
+                    <p class="hero-subtitle">Specializing in Deep Learning, Artificial Intelligence, Biomedical Signal Processing, Computational Neuroscience, and Brain-Computer Interfaces (BCI).</p>
                     <!-- <div class="hero-buttons">
                         <a href="#contact" class="btn btn--primary">Get In Touch</a>
                         <button href="pdf/ShreyaBiswasCV.pdf" class="btn btn--outline" id="download-cv">Download CV</button>
