Update footer copyright and add Flask tag

--- a/index.html
+++ b/index.html
@@ -697,11 +697,11 @@
                         <span class="skill-tag">Java</span>
                         <span class="skill-tag">C/C++</span>
                         <span class="skill-tag">Matlab</span>
+                        <span class="skill-tag">Flask</span>
                         <span class="skill-tag">HTML/CSS</span>
                         <span class="skill-tag">JavaScript</span>
                         <span class="skill-tag">NodeJS</span>
                         <span class="skill-tag">React</span>
-                        <span class="skill-tag">Flask</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -709,7 +709,6 @@
                     <div class="skill-list">
                         <span class="skill-tag">PyTorch</span>
                         <span class="skill-tag">TensorFlow</span>
-                        
                         <span class="skill-tag">Keras</span>
                         <span class="skill-tag">OpenCV</span>
                         <span class="skill-tag">Pandas</span>
@@ -780,7 +779,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Shreya Biswas. All rights reserved.</p>
+            <p>&copy; 2025 Sagnik De. All rights reserved.</p>
         </div>
     </footer>
 
