--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Sagnik De</h1>
-                    <h2>PhD Student in Computer Science</h2>
-                    <p class="hero-subtitle">Specializing in Deep Learning, Artificial Intelligence, Biomedical Signal Processing, Computational Neuroscience, and Brain-Computer Interfaces (BCI).</p>
+                    <p class="hero-subtitle">Research interests include Artificial Intelligence & IoT in Healthcare, Biomedical Signal Processing, Neural Signal Processing, Computational Neuroscience, and Human-Computer Interface (HCI)</p>
                     <!-- <div class="hero-buttons">
                         <a href="#contact" class="btn btn--primary">Get In Touch</a>
                         <button href="pdf/ShreyaBiswasCV.pdf" class="btn btn--outline" id="download-cv">Download CV</button>
                     </div> -->
                     <div class="hero-buttons">
-                        <a href="https://www.linkedin.com/in/shreya-biswas-25b75b19a/" 
+                        <a href="https://www.linkedin.com/in/sagnik08/" 
                            class="btn btn--outline" target="_blank">LinkedIn</a>
                         <a href="https://github.com/shreyab1111" 
                            class="btn btn--outline" target="_blank">GitHub</a>
-                        <a href="mailto:shrbiswas@cs.stonybrook.edu" 
+                        <a href="mailto:sagnikde2003@gmail.com" 
                            class="btn btn--outline">Email</a>
                         <a href="https://drive.google.com/file/d/1Vf-bnmaSqBav9VdKYMvNP8K_EkV49ZB-/view?usp=sharing" class="btn btn--outline" target="_blank">Download CV</a>
                         <!-- <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9885938" class="btn" target="_blank"> PDF</a> -->
@@ -85,15 +84,15 @@
                     <p>I aim to push the boundaries of data-efficient AI by collaborating with interdisciplinary teams of clinicians and scientists, and contributing solutions that impact healthcare, climate resilience, and real-world decision making.</p>
                     <div class="about-stats">
                         <div class="stat">
-                            <h3>10+</h3>
+                            <h3>15+</h3>
                             <p>Publications</p>
                         </div>
                         <div class="stat">
-                            <h3>6+</h3>
+                            <h3>3+</h3>
                             <p>Years Research Experience</p>
                         </div>
                         <div class="stat">
-                            <h3>3+</h3>
+                            <h3>4+</h3>
                             <p>Leadership Roles</p>
                         </div>
                     </div>
@@ -101,13 +100,10 @@
                 <div class="about-education">
                     <h3>Education</h3>
                     <div class="education-list">
+    
                         <div class="education-item">
-                            <h4>PhD in Computer Science</h4>
-                            <p>SUNY Stony Brook | 2023 - 2028 (Expected)</p>
-                        </div>
-                        <div class="education-item">
-                            <h4>B.E. in Electronics and Telecommunication</h4>
-                            <p>Jadavpur University | 2019 - 2023 | GPA: 9.29/10</p>
+                            <h4>B. Tech in Electronics and Communication Engineering</h4>
+                            <p>University of Calcutta | 2021 - 2025</p>
                         </div>
                     </div>
                 </div>
