--- a/index.html
+++ b/index.html
@@ -646,14 +646,14 @@
         <div class="timeline-item">
           <div class="timeline-marker"></div>
           <div class="timeline-content">
-            <h3>Chairperson</h3>
+            <h3>Secretary</h3>
             <h4 class="exp-header">
-              <span class="exp-left">IEEE Jadavpur University Computer Society Chapter</span>
-              <span class="exp-right">2022 – Jan 2023</span>
+              <span class="exp-left">IEEE Calcutta University Student Branch</span>
+              <span class="exp-right">Nov 2023 – Apr 2025</span>
             </h4>
             <ul>
-              <li>Led AICSSYC’22 with 300+ participants, coordinating speakers, program, and logistics.</li>
-              <li>Organized “Machine Learning Accelerator Summit 2.0”, focusing on hands-on ML workflows.</li>
+              <li>Led the flagship event AI for Society’24 with 100+ participants.</li>
+              <li>Organized “Smart India Hackathon-Internal Round”.</li>
             </ul>
           </div>
         </div>
@@ -662,13 +662,13 @@
         <div class="timeline-item">
           <div class="timeline-marker"></div>
           <div class="timeline-content">
-            <h3>Secretary</h3>
+            <h3>President</h3>
             <h4 class="exp-header">
-              <span class="exp-left">IEEE Jadavpur University Computer Society Chapter</span>
-              <span class="exp-right">2021 – 2022</span>
+              <span class="exp-left">AI & Robotics Club</span>
+              <span class="exp-right">Nov 2023 – Apr 2025</span>
             </h4>
             <ul>
-              <li>Produced the “Pass the Mic ’21” podcast series highlighting student research journeys.</li>
+              <li>Led the flagship event AI for Society’24 with 100+ participants.</li>
               <li>Co-organized “DoubleSlash” 48-hour hackathon; managed judging rubric and outreach.</li>
             </ul>
           </div>
